@@ -14,6 +14,8 @@ bzr-svn 0.4.4	UNRELEASED
    * Handle NULL_REVISION in SvnRepository.copy_content(). Fixes compatibility 
      with bzr merge-into.
 
+   * Implement ListBranchingScheme.is_branch_parent().
+
   BUG FIXES
 
    * Handle long file names with unicode characters correctly on python2.4 (#129334)
